fix: user ref popup position overflow right

--- a/src/app/components/share/user-ref/user-ref-popup/user-ref-popup.component.scss
+++ b/src/app/components/share/user-ref/user-ref-popup/user-ref-popup.component.scss
@@ -11,7 +11,8 @@
   left: 50%;
   z-index: $modal-z-index + 1;
   background-color: #fff;
-  width: 400px;
+  max-width: 400px;
+  width: 95%;
   box-sizing: border-box;
   font-weight: 500;
   box-shadow: $box-shadow-wide;
